color coding bitches

--- a/uncrustify/Makefile
+++ b/uncrustify/Makefile
@@ -396,12 +396,12 @@ distuninstallcheck_listfiles = find . -type f -print
 am__distuninstallcheck_listfiles = $(distuninstallcheck_listfiles) \
   | sed 's|^\./|$(prefix)/|' | grep -v '$(infodir)/dir$$'
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing aclocal-1.14
+ACLOCAL = ${SHELL} /home/joshua/go/hdb/uncrustify/missing aclocal-1.14
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
-AUTOCONF = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing autoconf
-AUTOHEADER = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing autoheader
-AUTOMAKE = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing automake-1.14
+AUTOCONF = ${SHELL} /home/joshua/go/hdb/uncrustify/missing autoconf
+AUTOHEADER = ${SHELL} /home/joshua/go/hdb/uncrustify/missing autoheader
+AUTOMAKE = ${SHELL} /home/joshua/go/hdb/uncrustify/missing automake-1.14
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=none
@@ -430,7 +430,7 @@ LIBOBJS =
 LIBS = 
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing makeinfo
+MAKEINFO = ${SHELL} /home/joshua/go/hdb/uncrustify/missing makeinfo
 MKDIR_P = /usr/bin/mkdir -p
 OBJEXT = o
 PACKAGE = uncrustify
@@ -445,10 +445,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.60
-abs_builddir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify
-abs_srcdir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify
-abs_top_builddir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify
-abs_top_srcdir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify
+abs_builddir = /home/joshua/go/hdb/uncrustify
+abs_srcdir = /home/joshua/go/hdb/uncrustify
+abs_top_builddir = /home/joshua/go/hdb/uncrustify
+abs_top_srcdir = /home/joshua/go/hdb/uncrustify
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -468,7 +468,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/install-sh
+install_sh = ${SHELL} /home/joshua/go/hdb/uncrustify/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
