--- a/uncrustify/src/Makefile
+++ b/uncrustify/src/Makefile
@@ -177,12 +177,12 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing aclocal-1.14
+ACLOCAL = ${SHELL} /home/joshua/go/hdb/uncrustify/missing aclocal-1.14
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
-AUTOCONF = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing autoconf
-AUTOHEADER = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing autoheader
-AUTOMAKE = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing automake-1.14
+AUTOCONF = ${SHELL} /home/joshua/go/hdb/uncrustify/missing autoconf
+AUTOHEADER = ${SHELL} /home/joshua/go/hdb/uncrustify/missing autoheader
+AUTOMAKE = ${SHELL} /home/joshua/go/hdb/uncrustify/missing automake-1.14
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=none
@@ -211,7 +211,7 @@ LIBOBJS =
 LIBS = 
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/missing makeinfo
+MAKEINFO = ${SHELL} /home/joshua/go/hdb/uncrustify/missing makeinfo
 MKDIR_P = /usr/bin/mkdir -p
 OBJEXT = o
 PACKAGE = uncrustify
@@ -226,10 +226,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.60
-abs_builddir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify/src
-abs_srcdir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify/src
-abs_top_builddir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify
-abs_top_srcdir = /home/eric/go/src/github.com/eoswald/hdb/uncrustify
+abs_builddir = /home/joshua/go/hdb/uncrustify/src
+abs_srcdir = /home/joshua/go/hdb/uncrustify/src
+abs_top_builddir = /home/joshua/go/hdb/uncrustify
+abs_top_srcdir = /home/joshua/go/hdb/uncrustify
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -249,7 +249,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/eric/go/src/github.com/eoswald/hdb/uncrustify/install-sh
+install_sh = ${SHELL} /home/joshua/go/hdb/uncrustify/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
