Uploading binaries, what's the worst that could happen?

--- a/uncrustify/etc/hdb.cfg
+++ b/uncrustify/etc/hdb.cfg
@@ -1,10 +1,10 @@
 # Uncrustify 0.55
 newlines                                 = lf
-input_tab_size                           = 8
+input_tab_size                           = 2
 output_tab_size                          = 8
 string_escape_char                       = 92
 string_escape_char2                      = 0
-indent_columns                           = 8
+indent_columns                           = 4
 indent_continue                          = 4
 indent_with_tabs                         = 2
 indent_align_string                      = false
@@ -267,7 +267,7 @@ nl_func_decl_end                         = ignore
 nl_func_decl_end_single                  = ignore
 nl_func_decl_empty                       = ignore
 nl_fdef_brace                            = remove
-nl_after_return                          = remove
+nl_after_return                          = false
 nl_return_expr                           = ignore
 nl_after_semicolon                       = true
 nl_after_brace_open                      = false
